Fixed missing margins and add triangle

--- a/src/assets/scss/_about.scss
+++ b/src/assets/scss/_about.scss
@@ -27,4 +27,7 @@
       margin-left: auto;
     }
   }
+  @include tablet-portrait {
+    margin-top: 48px;
+  }
 }
